--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -39,13 +39,13 @@
 
 	.table-full__row {
 
-		&:nth-child(2) {
-			.indicator {
-				span {
-					margin-top: 0.25em;
-				}
-			}
-		}
+		// &:nth-child(2) {
+		// 	.indicator {
+		// 		span {
+		// 			margin-top: 0.25em;
+		// 		}
+		// 	}
+		// }
 	
 
 		&:not(:first-child) {
@@ -120,11 +120,11 @@
 .modal-row__clients-row {
 	cursor: pointer;
 
-	transition: 0.2s opacity 0.3s linear, 0.2s height 0.3s linear;
+	// transition: 0.2s opacity 0.3s linear, 0.2s height 0.3s linear;
 	&:not(.active) {
 		opacity: 0;
 		visibility: hidden;
-		transition: 0.2s opacity 0.3s linear, 0.2s height 0.3s linear;
+		// transition: 0.2s opacity 0.3s linear, 0.2s height 0.3s linear;
 		height: 0;
 
 	}
