--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -264,7 +264,7 @@
 					input(type="radio" id="client-feedback-rbtn" name="client-feedback-rbtn")
 					label(for="client-feedback-rbtn")
 						|Выберите клиента
-					input.find-client(type="text")
+					input.find-client.info-area(type="text")
 					//- ul.autocomplete-result-list
 				.input-group
 					input(type="radio" id='uamf-feedback-rbtn' name="client-feedback-rbtn")
@@ -278,7 +278,7 @@
 				.input-group
 					p
 						|Выберите клиента
-					input(type="text")
+					input.info-area(type="text")
 					//- ul.autocomplete-result-list
 				button.confirm-bnt
 					span
