--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -131,11 +131,11 @@
     }
 
     input.find-client {
-        max-width: 145px;
+        // max-width: 145px;
         border-radius: 3px;
         margin-bottom: 5px;
         text-align: left;
-        padding: 2px 6px;
+        padding: 3px 6px 2px;
         margin-left: 24px;
     }
 
