--- a/app/less/main.less
+++ b/app/less/main.less
@@ -382,6 +382,7 @@ span.negative {
   height: 20px;
   svg {
     width: 20px;
+    margin-top: 0.1em;
     height: 20px;
   }
 }
@@ -642,11 +643,13 @@ i.label {
   transition: border 0.2s linear;
   outline: none;
   text-align: left;
-  padding: 4px 6px 2px 6px;
+  padding: 3px 6px 2px 6px;
 
   &:focus {
     border: 2px solid @main-color;
   }
+
+ 
 }
 
 
