--- a/app/less/vacancy/_main-info.less
+++ b/app/less/vacancy/_main-info.less
@@ -1,6 +1,6 @@
 .my-modal .main-info {
 	flex-wrap: nowrap;
-	margin-top: 10px;
+	margin-top: 19px;
 
 
 	.modal-row__layer {
@@ -65,8 +65,8 @@
 
 	p {
 		margin-bottom: 6px;
-		font-size: 12/14 * 1rem;
-		line-height: 1rem;
+		font-size: 1rem;
+		line-height: 16/14;
 		color: @main-color;
 	}
 }
@@ -79,9 +79,12 @@
 	z-index: 2;
 	width: 100%;
 	p {
+		// height: 22px;
 		span {
-			margin-top: 0.15em;
+			margin-top: 0.1em;
 			display: inline-block;
+			text-align: center;
+			line-height: 16/14; 
 		}
 		
 		margin-bottom: 0;
@@ -90,12 +93,13 @@
 	.choose-employer {
 			justify-content: center;
 			display: flex;
+			padding: 0 20px;
 		
 		
 		p {
 			// width: 100%;
 			background: @main-color;
-			padding: 3px 9px;
+			padding: 2.5px 9px;
 			display: inline-block;
 			border-radius: 20px;
 			cursor: pointer;
