--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -147,12 +147,14 @@
 p.status {
 	padding: 2px 6px;
 	border-radius: 15px;
+	height: 20px;
+	overflow: visible;
 
 	transition: background 0.2s linear, color 0.2s linear;
 	// &:hover {
 	// 	color: @white;
 	// }
-
+	
 	
 }
 
