--- a/app/index.pug
+++ b/app/index.pug
@@ -33,37 +33,37 @@ block content
 		.sidebar
 			include pug/layouts/sidebar
 		.rows-wrapper
-			.rows.worker-rows
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
-				include pug/layouts/row
+			//- .rows.worker-rows
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
+			//- 	include pug/layouts/row
 	include pug/layouts/_popup
 			//- include pug/layouts/header
 			//- include pug/layouts/footer
