--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -129,9 +129,9 @@
 
 	}
 	p {
-		text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+		// text-overflow: ellipsis;
+    // overflow: hidden;
+    // white-space: nowrap;
 
 	}
 }
