--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -115,19 +115,19 @@
 					label(for="never-rbtn")
 						|никогда
 		#managers-popup.sidebar-popup
-			form
-				.input-group
-					input(type="checkbox" id="AK-chbx")
-					label(for="AK-chbx")
-						i.tag.manager-tag.dark-blue-tag
-							|AK
-						|Алексей Ключников
-				.input-group
-					input(type="checkbox" id='CK-chbx')
-					label(for="CK-chbx")
-						i.tag.manager-tag.light-green-tag
-							|CK
-						|Светлана Ковальчук
+			//- form
+			//- 	.input-group
+			//- 		input(type="checkbox" id="AK-chbx")
+			//- 		label(for="AK-chbx")
+			//- 			i.tag.manager-tag.dark-blue-tag
+			//- 				|AK
+			//- 			|Алексей Ключников
+			//- 	.input-group
+			//- 		input(type="checkbox" id='CK-chbx')
+			//- 		label(for="CK-chbx")
+			//- 			i.tag.manager-tag.light-green-tag
+			//- 				|CK
+			//- 			|Светлана Ковальчук
 		#intermediaries-popup.sidebar-popup
 			form
 				.input-group.radio-group-type-1
