--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -1,31 +1,31 @@
 .popup
 	.popup__layer
 		#country-popup.sidebar-popup
-			form
-				.input-group
-					input(type="checkbox" id="AT-chbx")
-					label(for="AT-chbx")
-						|Австрия
-				.input-group
-					input(type="checkbox" id='DE-chbx')
-					label(for="DE-chbx")
-						|Германия
-				.input-group
-					input(type="checkbox" id='DK-chbx')
-					label(for="DK-chbx")
-						|Дания
-				.input-group
-					input(type="checkbox" id='NO-chbx')
-					label(for="NO-chbx")
-						|Норвегия
-				.input-group
-					input(type="checkbox" id='FI-chbx')
-					label(for="FI-chbx")
-						|Финляндия
-				.input-group
-					input(type="checkbox" id='SE-chbx')
-					label(for="SE-chbx")
-						|Швеция
+			//- form
+			//- 	.input-group
+			//- 		input(type="checkbox" id="AT-chbx")
+			//- 		label(for="AT-chbx")
+			//- 			|Австрия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='DE-chbx')
+			//- 		label(for="DE-chbx")
+			//- 			|Германия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='DK-chbx')
+			//- 		label(for="DK-chbx")
+			//- 			|Дания
+			//- 	.input-group
+			//- 		input(type="checkbox" id='NO-chbx')
+			//- 		label(for="NO-chbx")
+			//- 			|Норвегия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='FI-chbx')
+			//- 		label(for="FI-chbx")
+			//- 			|Финляндия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='SE-chbx')
+			//- 		label(for="SE-chbx")
+			//- 			|Швеция
 		#type-manufactury-popup.sidebar-popup
 			form.flex-form
 				fieldset
@@ -130,25 +130,25 @@
 			//- 			|Светлана Ковальчук
 		#intermediaries-popup.sidebar-popup
 			form
-				.input-group.radio-group-type-1
-					input(type="radio" id="show-rbtn" name="intermediaries-rbtn" checked="true")
-					label(for="show-rbtn")
-						|Показать
-					input(type="radio" id="remove-rbtn" name="intermediaries-rbtn")
-					label(for="remove-rbtn")
-						|Исключить
-				.input-group
-					input(type="checkbox" id="AngriNord-chbx")
-					label(for="AngriNord-chbx")
-						|AngriNord
-				.input-group
-					input(type="checkbox" id='Victoria-chbx')
-					label(for="Victoria-chbx")
-						|Виктория
-				.input-group
-					input(type="checkbox" id='Yanina-chbx')
-					label(for="Yanina-chbx")
-						|Янина
+			//- 	.input-group.radio-group-type-1
+			//- 		input(type="radio" id="show-rbtn" name="intermediaries-rbtn" checked="true")
+			//- 		label(for="show-rbtn")
+			//- 			|Показать
+			//- 		input(type="radio" id="remove-rbtn" name="intermediaries-rbtn")
+			//- 		label(for="remove-rbtn")
+			//- 			|Исключить
+			//- 	.input-group
+			//- 		input(type="checkbox" id="AngriNord-chbx")
+			//- 		label(for="AngriNord-chbx")
+			//- 			|AngriNord
+			//- 	.input-group
+			//- 		input(type="checkbox" id='Victoria-chbx')
+			//- 		label(for="Victoria-chbx")
+			//- 			|Виктория
+			//- 	.input-group
+			//- 		input(type="checkbox" id='Yanina-chbx')
+			//- 		label(for="Yanina-chbx")
+			//- 			|Янина
 		#vacancies-popup.sidebar-popup
 			form
 				fieldset
