--- a/app/pug/layouts/sidebar.pug
+++ b/app/pug/layouts/sidebar.pug
@@ -7,25 +7,25 @@
 				|Василий
 		.sidebar__lists
 			ul.sidebar__list
-				li.sidebar__list-item.sidebar__li(tabindex="1")
+				li.sidebar__list-item.sidebar__li
 					p
 						|Вакансии
 					span.sidebar__list-add
 						span
 						span
-				li.sidebar__list-item.sidebar__li(tabindex="2")
+				li.sidebar__list-item.sidebar__li
 					p
 						|Клиенты
 					span.sidebar__list-add
 						span
 						span
-				li.sidebar__list-item.active.sidebar__li(tabindex="3")
+				li.sidebar__list-item.active.sidebar__li.sidebar-employer
 					p 
 						|Работодатели
 					span.sidebar__list-add
 						span
 						span
-				li.sidebar__list-item.sidebar__li(tabindex="4")
+				li.sidebar__list-item.sidebar__li
 					p
 						|Статистика
 					span.sidebar__list-add
