--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -28,48 +28,48 @@
 			//- 			|Швеция
 		#type-manufactury-popup.sidebar-popup
 			form.flex-form
-				fieldset
-					.input-group
-						input(type="checkbox" id="flowers-chbx")
-						label(for="flowers-chbx")
-							|цветы
-					.input-group
-						input(type="checkbox" id="vegetables-chbx")
-						label(for="vegetables-chbx")
-							|овощи
-					.input-group
-						input(type="checkbox" id="cows-chbx")
-						label(for="cows-chbx")
-							|коровы
-					.input-group
-						input(type="checkbox" id="pigs-chbx")
-						label(for="pigs-chbx")
-							|свиньи
-					.input-group
-						input(type="checkbox" id="fields-chbx")
-						label(for="fields-chbx")
-							|поля
-				fieldset
-					.input-group
-						input(type="checkbox" id="berries-chbx")
-						label(for="berries-chbx")
-							|ягоды
-					.input-group
-						input(type="checkbox" id="greenhouses-chbx")
-						label(for="greenhouses-chbx")
-							|теплицы
-					.input-group
-						input(type="checkbox" id="wood-chbx")
-						label(for="wood-chbx")
-							|лес
-					.input-group
-						input(type="checkbox" id="landscape-chbx")
-						label(for="landscape-chbx")
-							|ландшафт
-					.input-group
-						input(type="checkbox" id="horses-chbx")
-						label(for="horses-chbx")
-							|лошади
+				//- fieldset
+				//- 	.input-group
+				//- 		input(type="checkbox" id="flowers-chbx")
+				//- 		label(for="flowers-chbx")
+				//- 			|цветы
+				//- 	.input-group
+				//- 		input(type="checkbox" id="vegetables-chbx")
+				//- 		label(for="vegetables-chbx")
+				//- 			|овощи
+				//- 	.input-group
+				//- 		input(type="checkbox" id="cows-chbx")
+				//- 		label(for="cows-chbx")
+				//- 			|коровы
+				//- 	.input-group
+				//- 		input(type="checkbox" id="pigs-chbx")
+				//- 		label(for="pigs-chbx")
+				//- 			|свиньи
+				//- 	.input-group
+				//- 		input(type="checkbox" id="fields-chbx")
+				//- 		label(for="fields-chbx")
+				//- 			|поля
+				//- fieldset
+				//- 	.input-group
+				//- 		input(type="checkbox" id="berries-chbx")
+				//- 		label(for="berries-chbx")
+				//- 			|ягоды
+				//- 	.input-group
+				//- 		input(type="checkbox" id="greenhouses-chbx")
+				//- 		label(for="greenhouses-chbx")
+				//- 			|теплицы
+				//- 	.input-group
+				//- 		input(type="checkbox" id="wood-chbx")
+				//- 		label(for="wood-chbx")
+				//- 			|лес
+				//- 	.input-group
+				//- 		input(type="checkbox" id="landscape-chbx")
+				//- 		label(for="landscape-chbx")
+				//- 			|ландшафт
+				//- 	.input-group
+				//- 		input(type="checkbox" id="horses-chbx")
+				//- 		label(for="horses-chbx")
+				//- 			|лошади
 		#contact-popup.sidebar-popup
 			form
 				.input-group
