--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -491,6 +491,11 @@
     }
   }
 
+  .common-info, .common-info__layer {
+    height: 100%;
+    min-height: 889px;
+  }
+
   .common-info__left {
     flex-basis: 250/1040 * 100%;
   }
