--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -1,31 +1,31 @@
 .popup
 	.popup__layer
 		#country-popup.sidebar-popup
-			form
-				.input-group
-					input(type="checkbox" id="AT-chbx")
-					label(for="AT-chbx")
-						|Австрия
-				.input-group
-					input(type="checkbox" id='DE-chbx')
-					label(for="DE-chbx")
-						|Германия
-				.input-group
-					input(type="checkbox" id='DK-chbx')
-					label(for="DK-chbx")
-						|Дания
-				.input-group
-					input(type="checkbox" id='NO-chbx')
-					label(for="NO-chbx")
-						|Норвегия
-				.input-group
-					input(type="checkbox" id='FI-chbx')
-					label(for="FI-chbx")
-						|Финляндия
-				.input-group
-					input(type="checkbox" id='SE-chbx')
-					label(for="SE-chbx")
-						|Швеция
+			//- form
+			//- 	.input-group
+			//- 		input(type="checkbox" id="AT-chbx")
+			//- 		label(for="AT-chbx")
+			//- 			|Австрия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='DE-chbx')
+			//- 		label(for="DE-chbx")
+			//- 			|Германия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='DK-chbx')
+			//- 		label(for="DK-chbx")
+			//- 			|Дания
+			//- 	.input-group
+			//- 		input(type="checkbox" id='NO-chbx')
+			//- 		label(for="NO-chbx")
+			//- 			|Норвегия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='FI-chbx')
+			//- 		label(for="FI-chbx")
+			//- 			|Финляндия
+			//- 	.input-group
+			//- 		input(type="checkbox" id='SE-chbx')
+			//- 		label(for="SE-chbx")
+			//- 			|Швеция
 		#managers-popup.sidebar-popup
 		#status-popup.sidebar-popup
 			form
