--- a/app/pug/layouts/work-popup/_manufactury-type.pug
+++ b/app/pug/layouts/work-popup/_manufactury-type.pug
@@ -1,34 +1,34 @@
 .row.manufactury-type.modal-row
-	.modal-row__controls
-		p
-			|Тип производства
-		.add-item
-			span
-				|+ 
-			|добавить тип производства
-	.modal-row__layer
-		.modal-row__manufactury-type-row
-			.input-group.modal-row__manufactury-type-select.native-select
-				select.info-area(name="")
-					option(value="" disabled selected)
-						|Выбрать
-					option(value="")
-						|Коровы
-					option(value="")
-						|Цветы
-			.input-group
-				span.delete-manufactury-type
-				input.info-area(type="text" name="")
-		.modal-row__manufactury-type-row
-			.input-group.modal-row__manufactury-type-select.native-select
-				select.info-area(name="")
-					option(value="" disabled selected)
-						|Выбрать
-					option(value="")
-						|Коровы
-					option(value="")
-						|Цветы
-			.input-group
-				span.delete-manufactury-type
-				input.info-area(type="text" name="")
-		//- select.info-area(name="")
+	//- .modal-row__controls
+	//- 	p
+	//- 		|Тип производства
+	//- 	.add-item
+	//- 		span
+	//- 			|+ 
+	//- 		|добавить тип производства
+	//- .modal-row__layer
+	//- 	.modal-row__manufactury-type-row
+	//- 		.input-group.modal-row__manufactury-type-select.native-select
+	//- 			select.info-area(name="")
+	//- 				option(value="" disabled selected)
+	//- 					|Выбрать
+	//- 				option(value="")
+	//- 					|Коровы
+	//- 				option(value="")
+	//- 					|Цветы
+	//- 		.input-group
+	//- 			span.delete-manufactury-type
+	//- 			input.info-area(type="text" name="")
+	//- 	.modal-row__manufactury-type-row
+	//- 		.input-group.modal-row__manufactury-type-select.native-select
+	//- 			select.info-area(name="")
+	//- 				option(value="" disabled selected)
+	//- 					|Выбрать
+	//- 				option(value="")
+	//- 					|Коровы
+	//- 				option(value="")
+	//- 					|Цветы
+	//- 		.input-group
+	//- 			span.delete-manufactury-type
+	//- 			input.info-area(type="text" name="")
+	//- 	//- select.info-area(name="")
