--- a/app/pug/layouts/work-popup/_vacancies-history.pug
+++ b/app/pug/layouts/work-popup/_vacancies-history.pug
@@ -2,258 +2,258 @@
 	button.show-more
 		span
 			|показать еще 5 вакансий
-	.modal-row__controls
-		p
-			|История вакансий
-	.modal-row__layer
-		.modal-row__vacancies-history-row
-			.modal-row__vacancies-history-labels
-				i.label.attention__label
-					span
-						|NO
-					span 
-						|293 - 17
-				span.number-of-people.attention-number
-					|М2
-			.modal-row__vacancies-history-date
-				time
-					|03.03.2019  -  03.09.2019
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.success-2__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.success-2__label
-					span
-						|Практика
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|25.03.2017  -  25.07.2017
-			.modal-row__vacancies-history-terms
-				time
-					|4 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row
-			.modal-row__vacancies-history-labels
-				i.label.attention__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-				span.number-of-people.success-number
-					|М2 Ж6
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|5 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Поля
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.attention__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Поля
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.success__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
-		.modal-row__vacancies-history-row.hidden-row
-			.modal-row__vacancies-history-labels
-				i.label.attention__label
-					span
-						|NO
-					span 
-						|293 - 17
-			.modal-row__vacancies-history-date
-				time
-					|15.04.2018  -  15.07.2018
-			.modal-row__vacancies-history-terms
-				time
-					|6 мес
-			.modal-row__vacancies-history-type
-				i.label.primary__label
-					span
-						|Рабочая
-				p
-					|Свиньи
+	//- .modal-row__controls
+	//- 	p
+	//- 		|История вакансий
+	//- .modal-row__layer
+	//- 	.modal-row__vacancies-history-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.attention__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 			span.number-of-people.attention-number
+	//- 				|М2
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|03.03.2019  -  03.09.2019
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.success-2__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.success-2__label
+	//- 				span
+	//- 					|Практика
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|25.03.2017  -  25.07.2017
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|4 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.attention__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 			span.number-of-people.success-number
+	//- 				|М2 Ж6
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|5 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Поля
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.attention__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Поля
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.success__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
+	//- 	.modal-row__vacancies-history-row.hidden-row
+	//- 		.modal-row__vacancies-history-labels
+	//- 			i.label.attention__label
+	//- 				span
+	//- 					|NO
+	//- 				span 
+	//- 					|293 - 17
+	//- 		.modal-row__vacancies-history-date
+	//- 			time
+	//- 				|15.04.2018  -  15.07.2018
+	//- 		.modal-row__vacancies-history-terms
+	//- 			time
+	//- 				|6 мес
+	//- 		.modal-row__vacancies-history-type
+	//- 			i.label.primary__label
+	//- 				span
+	//- 					|Рабочая
+	//- 			p
+	//- 				|Свиньи
