--- a/app/less/_loader.less
+++ b/app/less/_loader.less
@@ -8,6 +8,26 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.manufactury-type, .contacts-history, .vacancies-history{
+  .lds-ring {
+      width: 40px;
+      height: 40px;
+    }
+
+    .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px/2;
+    height: 64px/2;
+    margin: 8px/2;
+    border: 8px/2 solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: @main-color transparent transparent transparent;
+  }
+}
 .lds-ring div {
   box-sizing: border-box;
   display: block;
