--- a/app/pug/layouts/work-popup/_media.pug
+++ b/app/pug/layouts/work-popup/_media.pug
@@ -2,107 +2,107 @@
 	button.show-more
 		span
 			|показать еще
-	.modal-row__controls
-		p
-			|Медиа
-		.add-item
-			label.choose(for='add-media')
-				span
-					|+ 
-				|добавить
-			input#add-media.add-media(type='file' name='add-media' multiple='multiple')
+	//- .modal-row__controls
+	//- 	p
+	//- 		|Медиа
+	//- 	.add-item
+	//- 		label.choose(for='add-media')
+	//- 			span
+	//- 				|+ 
+	//- 			|добавить
+	//- 		input#add-media.add-media(type='file' name='add-media' multiple='multiple')
 			
-	.modal-row__layer
-		.modal-row__media-wrapper
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/2.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/3.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/4.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/5.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/6.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.jpg", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/3.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/4.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/5.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
-			.modal-row__media
-				a.modal-row__media-link(href="#" target="_blank")
-					img(src="img/1.png", alt="")
-				span.modal-row__media-remove
+	//- .modal-row__layer
+	//- 	.modal-row__media-wrapper
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/2.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/3.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/4.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/5.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/6.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.jpg", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/3.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/4.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/5.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
+	//- 		.modal-row__media
+	//- 			a.modal-row__media-link(href="#" target="_blank")
+	//- 				img(src="img/1.png", alt="")
+	//- 			span.modal-row__media-remove
