--- a/app/less/_loader.less
+++ b/app/less/_loader.less
@@ -9,7 +9,7 @@
   transform: translate(-50%, -50%);
 }
 
-.manufactury-type, .contacts-history, .vacancies-history{
+.manufactury-type, .contacts-history, .vacancies-history, .media{
   .lds-ring {
       width: 40px;
       height: 40px;
