--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -873,6 +873,7 @@
 
 
  .modal-row__media-wrapper {
+    border-top: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -903,6 +904,15 @@
  }
 
  .media {
+
+  .media__layer {
+    width: 100%;
+    opacity: 1;
+    transition: opacity 0.25s linear;
+    &.hidden {
+      opacity: 0;
+    }
+  }
   .modal-row__layer {
     max-height: 387px;
     height: 100%;
@@ -1346,7 +1356,7 @@
   }
 }
 
-.contact-select-modal__list.choices__list--dropdown {
+  .common-info-select-modal__list.choices__list--dropdown {
    overflow: auto;
      max-height: 250px;
 }
